--- a/bak/introduction.mdx
+++ b/bak/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Linkly AI
+description: "Local AI second‑brain—answers from your files."
 ---
 
 <img
