Update image formats to WebP for better performance and remove deprecated PNG files in documentation.

--- a/en/how-to-use.mdx
+++ b/en/how-to-use.mdx
@@ -5,12 +5,12 @@ description: "Linkly AI: Local AI second brain -- answers from your files."
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.png"
+  src="/images/hero-light.webp"
   alt="Light theme"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/images/hero-dark.webp"
   alt="Dark theme"
 />
 
