--- a/zh/introduction.mdx
+++ b/zh/introduction.mdx
@@ -5,12 +5,12 @@ description: "本地 AI 第二大脑，从你的文件即时回答。"
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light-zh.png"
+  src="/images/hero-light-zh.webp"
   alt="亮色主题"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark-zh.png"
+  src="/images/hero-dark-zh.webp"
   alt="暗色主题"
 />
 
