Update favicon to ICO format, enhance language support in navigation, and add PostHog integration details. Modify introduction sections in English and Chinese to emphasize open-source nature and improve content clarity.

--- a/en/introduction.mdx
+++ b/en/introduction.mdx
@@ -16,21 +16,22 @@ description: "Local AI second brain -- answers from your files."
 
 ## What is Linkly AI?
 
-Linkly AI is an AI knowledge base that runs locally as a desktop application.
+Linkly AI is an open-source AI knowledge base that runs locally as a desktop application.
 
 With Linkly AI, you can:
 
 - Have AI conversations with documents stored on your personal computer, without any limitations
 - Use LLM services from any provider, or local model deployments like [Ollama](https://ollama.com/)
 - Find documents in your knowledge base using vague descriptions
-- Use DeepResearch tools to research large volumes of documents and generate reports
+- Use [DeepResearch](https://openai.com/index/introducing-deep-research/) tools to research large volumes of documents and generate reports
 - Simply use it as another AI chatbot, but with a more elegant interface
 
 In essence, this is a completely free, open-source, elegant, and truly functional artificial intelligence second brain that belongs entirely to you.
 
 <Tip>
-  Linkly AI draws inspiration from the excellent lightweight knowledge base application called Project in 
-  [ChatGPT](https://www.anthropic.com/news/projects) and 
+  Linkly AI draws inspiration from the excellent lightweight knowledge base
+  application called Project in
+  [ChatGPT](https://www.anthropic.com/news/projects) and
   [Claude](https://support.anthropic.com/zh-CN/articles/9517075-%E4%BB%80%E4%B9%88%E6%98%AF%E9%A1%B9%E7%9B%AE).
   If you've used these products, you'll find Linkly AI very familiar.
 </Tip>
@@ -43,16 +44,28 @@ Have you ever faced these challenges?
 
 <CardGroup cols={2}>
   <Card title="Information Overload" icon="file-lines" iconType="duotone">
-    PDFs, DOCXs, web pages, notes and other documents scattered everywhere, making them hard to find and overwhelming to read
+    PDFs, DOCXs, web pages, notes and other documents scattered everywhere,
+    making them hard to find and overwhelming to read
   </Card>
-  <Card title="Time-Consuming Organization" icon="folder-tree" iconType="duotone">
-    Manually classifying, tagging, and creating folders takes far more time than it's worth
+  <Card
+    title="Time-Consuming Organization"
+    icon="folder-tree"
+    iconType="duotone"
+  >
+    Manually classifying, tagging, and creating folders takes far more time than
+    it's worth
   </Card>
   <Card title="Inefficient Search" icon="magnifying-glass" iconType="duotone">
-    Finding documents relies on memory and filenames, while the content you need is hidden somewhere in a file you only vaguely remember
+    Finding documents relies on memory and filenames, while the content you need
+    is hidden somewhere in a file you only vaguely remember
   </Card>
-  <Card title="Knowledge Hoarding Without Utilization" icon="box-archive" iconType="duotone">
-    Content collected and organized with great effort remains unused, creating vast "knowledge inventory" that provides little value
+  <Card
+    title="Knowledge Hoarding Without Utilization"
+    icon="box-archive"
+    iconType="duotone"
+  >
+    Content collected and organized with great effort remains unused, creating
+    vast "knowledge inventory" that provides little value
   </Card>
 </CardGroup>
 
@@ -71,6 +84,7 @@ These problems have never been efficiently solved until the emergence of AI.
     Most AI knowledge bases run in the cloud, forcing us to upload our data to their servers. If security issues arise or service providers misuse data, our private information could be compromised.
 
     Some major companies have even blatantly used user data to train their models.
+
   </Accordion>
   <Accordion title="Limited Capacity and High Costs">
     The high operational costs of AI applications are either passed on to users or result in reduced quality. Most AI knowledge bases offer only a few GB of free capacity.
@@ -87,6 +101,12 @@ The Linkly AI development team employs leading concepts and technical architectu
   <Card title="Local-First Approach" icon="laptop" horizontal="horizontal" iconType="duotone">
     Linkly AI is a client that runs entirely on your personal computer, with all data stored locally. If you can deploy models yourself, you can even run it completely offline.
   </Card>
+  <Card title="Open Source" icon="github" horizontal="horizontal" iconType="duotone">
+    Linkly AI embraces open source from Day One, based on a firm belief in the future of knowledge freedom and user sovereignty. Making the core code public means—you can personally review every line of logic to confirm that data only flows on your local machine; developers worldwide can also jointly improve performance and security, making the technology transparent and verifiable.
+
+    Only in this way can AI enhance everyone in a safer and more controllable manner.
+
+  </Card>
   <Card title="Data Security" icon="shield-check" horizontal="horizontal" iconType="duotone">
     Thanks to local operation and open-source strategy, Linkly AI offers absolute data security.
   </Card>
@@ -97,6 +117,7 @@ The Linkly AI development team employs leading concepts and technical architectu
     According to DIKW knowledge pyramid theory, people create knowledge bases to use them. Linkly AI includes multiple knowledge applications to help you better collect, organize, and use knowledge.
 
     We've organically integrated traditional readers, web clipping, and internet connectivity to help users complete data collection more conveniently and automatically.
+
   </Card>
   <Card title="First-Class User Experience" icon="star" horizontal="horizontal" iconType="duotone">
     A good product experience brings joy to users. We're committed to providing a powerful AI knowledge base while maintaining simplicity and elegance, without requiring users to learn excessive technical jargon, making it accessible to everyone.
@@ -109,3 +130,22 @@ The Linkly AI development team employs leading concepts and technical architectu
   alt="Dark theme"
 />
 </Frame>
+
+---
+
+Next, you can:
+
+<CardGroup cols={2}>
+  <Card
+    title="How to Get Started?"
+    icon="plane"
+    iconType="duotone"
+    horizontal="horizontal"
+  ></Card>
+  <Card
+    title="Join the Waitlist"
+    icon="hourglass-start"
+    iconType="duotone"
+    horizontal="horizontal"
+  ></Card>
+</CardGroup>
