Update image sources in Spanish and French documentation to use unified WebP format for consistency and improved performance.

--- a/es/how-to-use.mdx
+++ b/es/how-to-use.mdx
@@ -5,12 +5,12 @@ description: "Linkly AI - Un segundo cerebro con IA local, respondiendo instant√
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light-es.webp"
+  src="/images/hero-light.webp"
   alt="Tema claro"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark-es.webp"
+  src="/images/hero-dark.webp"
   alt="Tema oscuro"
 />
 
