--- a/es/introduction.mdx
+++ b/es/introduction.mdx
@@ -5,12 +5,12 @@ description: "Un segundo cerebro con IA local, respondiendo instantáneamente de
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light-es.webp"
+  src="/images/hero-light.webp"
   alt="Tema claro"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark-es.webp"
+  src="/images/hero-dark.webp"
   alt="Tema oscuro"
 />
 
