--- a/fr/introduction.mdx
+++ b/fr/introduction.mdx
@@ -5,12 +5,12 @@ description: "Un second cerveau IA local, répondant instantanément à partir d
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light-fr.webp"
+  src="/images/hero-light.webp"
   alt="Thème clair"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark-fr.webp"
+  src="/images/hero-dark.webp"
   alt="Thème sombre"
 />
 
